--- a/terraform/assets/configs/apache-vhost.conf
+++ b/terraform/assets/configs/apache-vhost.conf
@@ -7,6 +7,7 @@
         AllowOverride None
         Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
         Require all granted
+        SetHandler cgi-script
     </Directory>
 
     # Enable CGI execution in document root
